--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* General Styles */
+/* in this file, all styles used in the app are implemented. */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f5f5f5;
@@ -87,3 +88,13 @@ body {
   .checkout {
     margin-top: 2rem;
   }
+  /* google font  */
+
+.fst-inter {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0;
+}
